# simiya

./: README.md  dune-project  flake.nix  pyproject.toml
lib/: dune
nix/: default.nix  develop.nix  versions.nix
nix/compiler/: default.nix
nix/targets/: default.nix
nix/targets/backend/: default.nix
simiya/: __init__.py  __main__.py  ast.py  cli.py  datatypes.py  type_check.py  types.py
simiya/frontend/: __init__.py  api.py  ast.py  datatypes.py  grammar.py  transform.py
simiya/type_system/: __init__.py  function.py  functions.py  module.py
tensor_typer/: __init__.py  ast.py  cli.py  grammar.py  types.py
test/: dune
